# Roberto-Arm-Pickup

./: CMakeLists.txt  README.md  package.xml
config/: pick_motions.yaml
launch/: pick_demo.launch  pick_simulation.launch  roberto_ik_plan.launch  roberto_ik_server_only.launch  test_world.world
scripts/: ik_planner.py  listener.py  pick_and_place_server.py  pickup.py  publish_place.py  talker.py
temp/: listener.py  pick_client.py
worlds/: single_cube.world
